==> Bob46Zhu/STM32F103_GIT/Test/src/FSMC_LCD/bsp_ili9341_lcd.c <==
#include "bsp_ili9341_lcd.h"
#include "../font/fonts.h"

static void ILI9341_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	//使能FSMC对应相应管脚时钟
	RCC_APB2PeriphClockCmd(
				/*控制信号*/
			ILI9341_CS_CLK|ILI9341_DC_CLK|ILI9341_WR_CLK|
			ILI9341_RD_CLK|ILI9341_BK_CLK|ILI9341_RST_CLK|
			/*数据信号*/
			ILI9341_D0_CLK|ILI9341_D1_CLK|ILI9341_D2_CLK|
			ILI9341_D3_CLK|ILI9341_D4_CLK|ILI9341_D5_CLK|
			ILI9341_D6_CLK|ILI9341_D7_CLK|ILI9341_D8_CLK|
			ILI9341_D9_CLK|ILI9341_D10_CLK|ILI9341_D11_CLK|
			ILI9341_D12_CLK|ILI9341_D13_CLK|ILI9341_D14_CLK|
			ILI9341_D15_CLK,ENABLE);
	/*配置FSMC相对应的数据线，FSMC-D0-D15*/
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;

	GPIO_InitStructure.GPIO_Pin = ILI9341_D0_PIN;
	GPIO_Init(ILI9341_D0_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D1_PIN;
	GPIO_Init(ILI9341_D1_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D2_PIN;
	GPIO_Init(ILI9341_D2_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D3_PIN;
	GPIO_Init(ILI9341_D3_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D4_PIN;
	GPIO_Init(ILI9341_D4_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D5_PIN;
	GPIO_Init(ILI9341_D5_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D6_PIN;
	GPIO_Init(ILI9341_D6_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D7_PIN;
	GPIO_Init(ILI9341_D7_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D8_PIN;
	GPIO_Init(ILI9341_D8_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D9_PIN;
	GPIO_Init(ILI9341_D9_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D10_PIN;
	GPIO_Init(ILI9341_D10_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D11_PIN;
	GPIO_Init(ILI9341_D11_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D12_PIN;
	GPIO_Init(ILI9341_D12_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D13_PIN;
	GPIO_Init(ILI9341_D13_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D14_PIN;
	GPIO_Init(ILI9341_D14_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_D15_PIN;
	GPIO_Init(ILI9341_D15_PORT,&GPIO_InitStructure);

	/*
	 * 配置FSMC相对应的控制线
	 * FSMC_NOE	: LCD-RD
	 * FSMC_NWE	: LCD-WR
	 * FSMC_NE1	: LCD-CS
	 * FSMC_A16 : LCD-DC
	 * */
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;

	GPIO_InitStructure.GPIO_Pin = ILI9341_RD_PIN;
	GPIO_Init(ILI9341_RD_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_WR_PIN;
	GPIO_Init(ILI9341_WR_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_CS_PIN;
	GPIO_Init(ILI9341_CS_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = ILI9341_DC_PIN;
	GPIO_Init(ILI9341_DC_PORT,&GPIO_InitStructure);

	/* 配置LCD复位RST控制管脚 */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

	GPIO_InitStructure.GPIO_Pin = ILI9341_RST_PIN;
	GPIO_Init(ILI9341_RST_PORT,&GPIO_InitStructure);

	/* 配置LCD背光控制管脚 */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

	GPIO_InitStructure.GPIO_Pin = ILI9341_BK_PIN;
	GPIO_Init(ILI9341_BK_PORT,&GPIO_InitStructure);

}

static void ILI9341_REG_Config(void)
{
	/* Power ontrol B (CFh) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xCF);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x81);
	ILI9341_Write_Data(0x30);

	/* Power on sequence control (EDh) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xED);
	ILI9341_Write_Data(0x64);
	ILI9341_Write_Data(0x03);
	ILI9341_Write_Data(0x12);
	ILI9341_Write_Data(0x81);

	/* Driver timing control A (E8h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xE8);
	ILI9341_Write_Data(0x85);
	ILI9341_Write_Data(0x10);
	ILI9341_Write_Data(0x78);

	/* Power control A (CBh) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xCB);
	ILI9341_Write_Data(0x39);
	ILI9341_Write_Data(0x2C);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x34);
	ILI9341_Write_Data(0x02);

	/* Pump ratio control (F7h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xF7);
	ILI9341_Write_Data(0x20);

	/* Driver timing control B (EAh) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xEA);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x00);

	/* Frame Rate Control (In Normal/Full Colors) (B1h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xB1);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x1B);

	/* Display Function Control (B6h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xB6);
	ILI9341_Write_Data(0x0A);
	ILI9341_Write_Data(0xA2);

	/* Power Control 1 (C0h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xC0);
	ILI9341_Write_Data(0x35);

	/* Power Control 2 (C1h) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0xC1);
	ILI9341_Write_Data(0x11);

	/* VCOM Control 1 (C5h) */
	ILI9341_Write_Cmd(0xC5);
	ILI9341_Write_Data(0x45);
	ILI9341_Write_Data(0x45);

	/* VCOM Control 2 (C7h) */
	ILI9341_Write_Cmd(0xC7);
	ILI9341_Write_Data(0xA2);

	/* Enable 3G (F2h) */
	ILI9341_Write_Cmd(0xF2);
	ILI9341_Write_Data(0x00);

	/* Gamma Set(26h) */
	ILI9341_Write_Cmd(0x26);
	ILI9341_Write_Data(0x01);
	DEBUG_DELAY();

	/* Positive Gamma Correction */
	ILI9341_Write_Cmd(0xE0);	//Set Gamma
	ILI9341_Write_Data(0x0F);
	ILI9341_Write_Data(0x26);
	ILI9341_Write_Data(0x24);
	ILI9341_Write_Data(0x0B);
	ILI9341_Write_Data(0x0E);
	ILI9341_Write_Data(0x09);
	ILI9341_Write_Data(0x54);
	ILI9341_Write_Data(0xA8);
	ILI9341_Write_Data(0x46);
	ILI9341_Write_Data(0x0C);
	ILI9341_Write_Data(0x17);
	ILI9341_Write_Data(0x09);
	ILI9341_Write_Data(0x0F);
	ILI9341_Write_Data(0x07);
	ILI9341_Write_Data(0x00);

	/* Negative Gamma Correction (E1h) */
	ILI9341_Write_Cmd(0xE1);	//set Gamma
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x19);
	ILI9341_Write_Data(0x1B);
	ILI9341_Write_Data(0x04);
	ILI9341_Write_Data(0x10);
	ILI9341_Write_Data(0x07);
	ILI9341_Write_Data(0x2A);
	ILI9341_Write_Data(0x47);
	ILI9341_Write_Data(0x39);
	ILI9341_Write_Data(0x03);
	ILI9341_Write_Data(0x06);
	ILI9341_Write_Data(0x06);
	ILI9341_Write_Data(0x30);
	ILI9341_Write_Data(0x38);
	ILI9341_Write_Data(0x0F);

	/* memory access control set */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0x36);
	ILI9341_Write_Data(0xC8);	//竖屏 左上角到(起点)到右下角(终点)
	DEBUG_DELAY();

	/* column address control set */
	ILI9341_Write_Cmd(CMD_SetCoordinateX);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0xEF);

	/* page address control set */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(CMD_SetCoordinateY);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x00);
	ILI9341_Write_Data(0x01);
	ILI9341_Write_Data(0x3F);

	/* Pixel Format Set (3Ah) */
	DEBUG_DELAY();
	ILI9341_Write_Cmd(0x3A);
	ILI9341_Write_Data(0x55);

	/* Sleep Out(11h) */
	ILI9341_Write_Cmd(0x11);
	ILI9341_Delay(0xAFFF << 2);
	DEBUG_DELAY();

	/* Display ON (29h) */
	ILI9341_Write_Cmd(0x29);

}

void ILI9341_BackLed_Control(FunctionalState enumState)
{
	if(enumState)
	{
		GPIO_ResetBits(ILI9341_BK_PORT,ILI9341_BK_PIN);
	}
	else
	{
		GPIO_SetBits(ILI9341_BK_PORT,ILI9341_BK_PIN);
	}
}

void ILI9341_Rst(void)
{
	GPIO_ResetBits(ILI9341_RST_PORT,ILI9341_RST_PIN); //低电平复位
	ILI9341_Delay(0xAFF);
	GPIO_SetBits(ILI9341_RST_PORT,ILI9341_RST_PIN);
	ILI9341_Delay(0xAFF);
}

void ILI9341_DispChar_EN(uint16_t usX,uint16_t usY,const char cChar)
{
	uint8_t byteCount,bitCount,fontLenght;
	uint16_t ucRelativePosition;
	uint8_t *Pfont;

	//对ascii码表偏移（字模表不包含ASCII表的前32个非图形符号）
	ucRelativePosition = cChar - ' ';
	//每个字模的字节数
	fontLenght = (LCD_Currentfonts->Width * LCD_Currentfonts->Height)/8;
	//字模首地址
	//ascii码表偏移值乘以每个字模的字节数，求出字模的偏移位置
	Pfont = (uint8_t *)&LCD_Currentfonts->table[ucRelativePosition * fontLenght];
	//设置显示窗口
	ILI9341_OpenWindow(usX,usY,LCD_Currentfonts->Width,LCD_Currentfonts->Height);
	ILI9341_Write_Cmd(CMD_SetPixel);

	//按字节读取字模数据
	//由于前面直接设置了显示窗口，显示数据会自动换行
	for(byteCount = 0;byteCount < fontLenght;byteCount++)
	{
		//一位一位处理要显示的颜色
		for(bitCount = 0;bitCount < 8;bitCount++)
		{
			if(Pfont[byteCount] & (0x80 >> bitCount))
				ILI9341_Write_Data(CurrentTextColor);
			else
				ILI9341_Write_Data(CurrentBackColor);
		}
	}
}
